--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,9 +1,10 @@
 name: React CI
 
 on:
-  push:
-    branches:
-      - "master"
+ push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -18,3 +19,5 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm test
+
+
