--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,29 +1,26 @@
-name: React CI
+name: Node.js CI
 
 on:
- push:
-    branches: [ "main" ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [15.x]
-    
+        node-version: [10.x, 12.x, 14.x, 15.x]
+
     steps:
-      - name: Checkout
-       uses: actions/checkout@v2
-
-     - name: Setup node
-       uses: actions/setup-node@v2
-
-     - name: Install dependencies
-       run: npm install
-
-     - name: Build static file
-       run: npm run build
-
-
-
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
