--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "best-movies",
-  "homepage": "https://Satish627.github.io/Sep6-Frontend",
+  "homepage": "https://satish627.github.io/sep6-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
