--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test --passWithNoTests
+    - run: npm test 
     
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
