--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Satish627.github.io/SEP6_Frontend",
+  "homepage": "https://satish627.github.io/sep6_frontend",
   "name": "best-movies",
   "version": "0.1.0",
   "private": true,
